--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "npm run prettify; next lint",
-    "prettify": "prettier --write ."
+    "prettify": "prettier --write .",
+    "ci": "prettier --check .; next lint; next build"
   },
   "dependencies": {
     "@clerk/nextjs": "^5.3.7",
